Adding initial codebase for iOS and macOS

--- a/thecode Extension/Resources/popup.html
+++ b/thecode Extension/Resources/popup.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="popup.css">
-    <script type="module" src="popup.js"></script>
-</head>
-<body>
-    <strong>Hello World!</strong>
-</body>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="popup.css">
+        <script type="module" src="popup.js"></script>
+        <title>TheCode</title>
+    </head>
+  <body>
+    <h1>Paramètres définis</h1>
+    <h2>Ils peuvent être modifiés dans l'application TheCode</h2>
+    <p id="error"></p>
+    <p>Contient des minuscules : <span id="minState"></span></p>
+    <p>Contient des majuscules : <span id="majState"></span></p>
+    <p>Contient des symboles : <spanp id="symState"></span></p>
+    <p>Contient des chiffres : <span id="chiState"></span></p>
+    <p>Longueur du mot de passe : <span id="lenghtNumber"></span></p>
+    <p id="encodingKey"></p>
+  </body>
 </html>
+
